# tcmg412-proj1

./: .firebaserc  about.html  contact.html  main.py  pyproject.toml  replit.nix
server/: Dockerfile
server/src/templates/: index.html  style.css
server/templates/: contact.html  home.html
templates/: about.html  contact.html  home.html  style.css
