[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
replit = "^3.2.4"
Flask = "^2.2.0"
docutils = "^0.19"
importlib-metadata = "^4.12.0"
numpy = "^1.23.2"
wincertstore = "^0.2.1"
lockfile = "^0.12.2"
HTMLParser = "^0.0.2"
Brotli = "^1.0.9"
keyring = "^23.9.1"
ordereddict = "^1.1"
python-ntlm = "^1.1.0"
tornado = "^6.2"
cryptography = "^37.0.4"
zipp = "^3.8.1"
lxml = "^4.9.1"
Cython = "^0.29.32"
monotonic = "^1.6"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"